--- a/LRSystem/LRSystem.vcxproj
+++ b/LRSystem/LRSystem.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\database.cpp" />
     <ClCompile Include="src\person.cpp" />
     <ClCompile Include="src\menu.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -134,6 +135,7 @@
     <ClCompile Include="src\verifydata.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="header\database.hpp" />
     <ClInclude Include="header\menu.hpp" />
     <ClInclude Include="header\person.hpp" />
     <ClInclude Include="header\user.hpp" />
